--- a/public/src/app/profile/profile.component.html
+++ b/public/src/app/profile/profile.component.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-
-<h5 class="flow-text" style="color:white;display:inline-block;padding:20px;width:720px;margin-bottom:50px;border:solid-white 2px;border-radius:5px">cryptoSwitch</h5>
-
-<div class="fixed-action-btn horizontal">
-
-  <a class="btn-floating btn-large waves-effect waves-light" [routerLink]="['mydash']" (click)='onHomeClick()'>{{currentUser.firstname}}</a> 
-
-<ul>
-  <li><a class="btn-floating btn-large waves-effect waves-light"[routerLink]="['convert']" (click)='otherClick()'>Convert</a> </li>
-  <li><a class="btn-floating btn-large waves-effect waves-light"[routerLink]="['contact']"(click)='otherClick()'>ContactUs</a></li>
-  <li><a class="btn-floating btn-large waves-effect waves-light"href='javascript:void(0)' (click)='onSignOut()'>SignOut</a></li>
-</ul>
-</div>
-
+  <div style="margin-bottom:40px;height:70px;background: #06beb6;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to left, #48b1bf, #06beb6);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to left, #48b1bf, #06beb6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      ">
+          <h5 class="flow-text" style="color:white;padding-left:20px;padding:20px;font-family:subzero">Welcome {{currentUser.firstname}}</h5>
+          <div class="fixed-action-btn horizontal" style="position:float;top:35px;right:50px;">
+            <a class="btn-floating btn-large waves-effect waves-light" style='background-color:#42ebf4' [routerLink]="['mydash']" (click)='onHomeClick()'><i class="material-icons" style='font-size:35px;padding-right:9px;margin-top:-5px'>equalizer</i></a>
+            <ul>
+              <li><a class="btn-floating  waves-effect waves-light"   style='background-color:#9ef7d2' [routerLink]="['convert']" (click)='otherClick()'><i class="material-icons" style='padding-right:9px;padding-top:2px;margin-top:-7px'>add_circle_outline</i></a></li>
+              <li><a class="btn-floating  waves-effect waves-light"  style='background-color:#63a6ff' [routerLink]="['contact']"(click)='otherClick()'><i class="material-icons" style='padding-right:9px;margin-top:-6px'>forum</i></a></li>
+              <li><a class="btn-floating  waves-effect waves-light" style='background-color:#ff4762' href='javascript:void(0)' (click)='onSignOut()'><i class="material-icons" style='padding-right:9px;margin-top:-6px;'>close</i></a></li>
+            </ul>
+          </div>
+  </div>
 <div *ngIf=" !homeClicked && !otherClicked ; else routeit">
 <app-mydash></app-mydash>
 </div>
