--- a/public/src/app/dash/dash.component.css
+++ b/public/src/app/dash/dash.component.css
@@ -7,7 +7,7 @@
 
 a{
     padding:5px;
-    color:lightskyblue;
+    color:white;
 }
 
 
@@ -20,8 +20,8 @@ background: linear-gradient(to top, #4B79A1,#283E51); /* W3C, IE 10+/ Edge, Fire
 }
 
 @font-face {
-    font-family: 'earthorb';
-    src:url('./../../assets/fonts/nasalization-rg.ttf');
+    font-family: 'subzero';
+    src:url('./../../assets/fonts/earthorbiter.ttf');
     font-weight: normal;
     font-style: normal;
 }
