--- a/public/src/app/dash/dash.component.html
+++ b/public/src/app/dash/dash.component.html
@@ -10,12 +10,15 @@
 
 <body>
     <nav style='margin-bottom:30px;'>
-        <div class="nav-wrapper" style='background:#4B79A1'>
+        <div class="nav-wrapper" style='background: #06beb6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #48b1bf, #06beb6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #48b1bf, #06beb6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+'>
           <div class="brand-logo">
-            <h5 class="flow-text" style="color:white;display:inline-block;border:solid-white 2px;border-radius:5px;font-family:earthorb;padding-left:20px">transCRYPTER</h5>
+            <h3 class="flow-text" style="color:white;display:inline-block;border:solid-white 2px;border-radius:5px;padding-left:20px;font-family:subzero">transCRYPTER</h3>
           </div>
-          <ul class="right hide-on-med-and-down" style='padding-right:20px;'>
-            <li style='padding-right:15px'><a [routerLink]="['/home']" (click)='onHomeClick()'>Home</a></li>
+          <ul class="right hide-on-med-and-down" style='padding-right:20px'>
+            <li style='padding-right:15px;'><a [routerLink]="['/home']" (click)='onHomeClick()'>Home</a></li>
             <li style='padding-left:15px;padding-right:15px;'><a [routerLink]="['/convert']" (click)='otherClick()'>Convert</a></li>  
             <li style='padding-left:15px;padding-right:15px;'><a [routerLink]="['/reg']"(click)='otherClick()' >SignUp</a></li>
             <li style='padding-left:15px;padding-right:15px;'> <a [routerLink]="['/loginreg']"(click)='otherClick()'>SignIn</a></li>
