--- a/public/src/app/home/home.component.html
+++ b/public/src/app/home/home.component.html
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title></title>
 </head>
-<body>
+<body style='padding-bottom:400px;'>
 
   <h6 style="color:white;padding-left:10px;display:block;margin:10px;margin-bottom:40px;text-align:center;font-size:20px">Enter in trades made to track crypto-performance and coin-stats</h6>
 
   <div style="width:300px;margin:20px;display:inline-block;border:solid#0ED7A9 2px;border-radius:10px;padding:20px">
       <form id='form2' (submit)='convert()' #Form='ngForm' class="col s5">
           
-          <div style='color:#b7ffea' class="input-field col s5">
+          <div style='color:#b7ffea;padding:10px' class="input-field col s5">
             <select id='cname' name='name' [(ngModel)]="newCoin.name" materialize="material_select">
               <option  *ngFor='let coin of coins'>{{coin}}</option>
             </select>
