--- a/public/src/app/loginreg/loginreg.component.html
+++ b/public/src/app/loginreg/loginreg.component.html
@@ -1,8 +1,9 @@
+<body style='padding-bottom:400px;'>
 <div class="container"style='padding-top:70px'>
   <div class='row'>
     <div class='col s12'>
             <div style='text-align:center'>
-              <h3 class='flow-text' style='color:lightcyan'>Sign In and view your portfolio performance</h3>
+              <h3 class='flow-text' style='color:lightcyan'>Sign In to add trades and track portfolio performance</h3>
             </div>
       </div>
   </div>
@@ -31,3 +32,4 @@
     </div>
   </div>
 </div>
+</body>
