--- a/public/src/app/main/main.component.html
+++ b/public/src/app/main/main.component.html
@@ -24,8 +24,8 @@
 <footer class="page-footer" style='background: #06beb6;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #48b1bf, #06beb6);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #48b1bf, #06beb6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-;height:90px'>
-  <div style="display:block;text-align:center;margin-top:100px;padding:15px">
+;'>
+  <div style="display:block;text-align:center;margin-top:430px;padding:15px;padding-bottom:50px">
       <a style='color:white' href="https://www.linkedin.com/in/vladimirgrigoryan/"><i class="fa fa-linkedin-square fa-4" aria-hidden="true" style='font-size: 20px;padding:5px'></i></a>
       <a style='color:white;' href="https://github.com/vladgrig93"><i class="fa fa-github fa-4" aria-hidden="true" style='font-size: 20px;padding:5px'></i></a>
     <p class="flow-text" style='font-size:14px;color:white'>&copy; 2018 Transcrypter: All rights reserved</p>
