--- a/public/src/app/contact/contact.component.html
+++ b/public/src/app/contact/contact.component.html
@@ -6,12 +6,12 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
  </head>
- <body>
+ <body style='padding-bottom:500px'>
    <div class="container">
-   
+     <div *ngIf='!contactSent'>
       <h6 class='flow-text' style='color:white;text-align:center;margin-bottom:43px'>Have suggestions for improvement, or inquiries? We'd love to hear your feedback, so please shoot us a message</h6>						
       <div style='text-align:center;'>
-        <div *ngIf='!contactSent' style='display:inline-block'>      
+        <div  style='display:inline-block'>      
             <form style='margin-bottom:150px;'id='contactform' (submit)='onContactSend()'>
               <div class="input-field col s5">
                 <input style='color:#b7ffea'id='memail' *ngIf='!message'name="email"type="email" class='validate' [(ngModel)]="newContact.email">
@@ -26,9 +26,10 @@
                 </button>
             </form>
         </div>
-        <div *ngIf='contactSent' style='color:aquamarine'>Thank you, your message has been sent and one of our representatives will get back to you shortly</div>
       </div>
-   </div>
+    </div>
+    <div *ngIf='contactSent' style='color:#b7ffea;padding-top:50px;padding-bottom:300px'><h6 style='padding-left:100px;'class='flow-text'>Thank you, your message has been sent and one of our representatives will get back to you shortly</h6></div>
+  </div>
  </body>
  </html> 
 
