--- a/public/src/app/mydash/mydash.component.html
+++ b/public/src/app/mydash/mydash.component.html
@@ -7,8 +7,7 @@
   <title>Document</title>
   <script src="node_modules/chart.js/src/chart.js"></script>
 </head>
-<body>    
-
+<body style='padding-bottom:400px;'>    
 
 <div style="padding:10px;padding-left:20px">
   <h4 style='color:#a5f3ff; margin-bottom:20px;border-bottom:#48b1bf solid 0.1px'>Crypto Portfolio</h4>
@@ -67,8 +66,8 @@
       <p style="color:lightcyan;padding-bottom:20px;font-size:18px;text-align:center">Portfolio Allocation</p>
       <canvas id='canvas'>{{myChart}}</canvas>
     </div>
-    <div class='col s8' style="display:inline-block;margin-bottom:40px;">
-      <p style="color:lightcyan;padding-bottom:20px;font-size:18px;text-align:center">Trade/Market Performance</p>
+    <div class='col s12' style="display:inline-block;margin-bottom:20px;">
+      <p style="color:lightcyan;padding-bottom:20px;font-size:25px;text-align:center">Trade/Market Performance</p>
       <canvas id='canvas2'>{{myBarChart}}</canvas>
     </div>
 </div>
