--- a/public/src/app/reg/reg.component.html
+++ b/public/src/app/reg/reg.component.html
@@ -1,3 +1,4 @@
+  <body style='padding-bottom:400px;'>
   <div class="row" style='display:inline-block;padding-left:30px'>
     <div class='col s8'>
       <div class="flow-text" style="display:inline-block;border:0px;">  
@@ -44,3 +45,4 @@
         </ul>
     </div> 
   </div>  
+  </body>
